tests/macros/missing/plugin.stderr
error: missing required option `plugin`
 --> $DIR/plugin.rs:2:36
  |
2 |     inquisition::questions![plugin { name: "plugin" }];
  |                                    ^^^^^^^^^^^^^^^^^^
