tests/macros/missing/plugin.rs
fn main() {
    inquisition::questions![plugin { name: "plugin" }];
}
